@@ -1,8 +1,8 @@
 sub recurs {
     my $depth = shift;
-    sleep 1;
+    select(undef, undef, undef, 0.3);
     recurs($depth-1) if $depth > 1;
 }
 
-recurs(2); # recurs gets called twice
+recurs(3); # recurs gets called twice
     
